--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Use Case Diagram</title>
+  <title>Use Case Diagram - Actors Only</title>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   <script>
     mermaid.initialize({ startOnLoad: true });
   </script>
 </head>
 <body>
-  <h1>Hospital Management System - Use Case Diagram</h1>
+  <h1>Hospital Management System - Use Case Diagram (Actors Only)</h1>
   <div class="mermaid">
     graph TB
       %% Actors
@@ -23,22 +23,13 @@
       %% Hospital Management System
       HMS[Hospital Management System]
 
-      %% Use Cases
-      PatientRegistration[Patient Registration]
-      AppointmentScheduling[Appointment Scheduling]
-      AccessEHR[Access EHR]
-      Billing[Billing and Invoice Generation]
-      InventoryManagement[Inventory Management]
-
       %% Connections
-      Doctors -->|Access EHR| HMS
-      Surgeons -->|Access EHR| HMS
-      Nurses -->|Access EHR| HMS
-      Nurses -->|Appointment Scheduling| HMS
-      AdminStaff -->|Patient Registration| HMS
-      AdminStaff -->|Appointment Scheduling| HMS
-      AdminStaff -->|Billing| HMS
-      Pharmacy -->|Inventory Management| HMS
+      Doctors --> HMS
+      Surgeons --> HMS
+      Nurses --> HMS
+      AdminStaff --> HMS
+      Pharmacy --> HMS
   </div>
 </body>
 </html>
+
