use case diagram

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </script>
 </head>
 <body>
-  <h1>Hospital Management System - Use Case Diagram (Actors Only)</h1>
+  <h1>Hospital Management System - Use Case Diagram)</h1>
   <div class="mermaid">
     graph TB
       %% Actors
