--- a/index.html
+++ b/index.html
@@ -3,48 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Use Case Diagram</title>
+  <title>Sequence Diagram</title>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   <script>
     mermaid.initialize({ startOnLoad: true });
   </script>
 </head>
 <body>
-  <h1>Hospital Management System - Use Case Diagram</h1>
+  <h1>Hospital Management System - Sequence Diagram</h1>
   <div class="mermaid">
-    graph TD
-      %% Stick Figures (Actors)
-      Doctors[🏥 Doctors]
-      Surgeons[👨‍⚕️ Surgeons]
-      Nurses[👩‍⚕️ Nurses]
-      AdminStaff[💻 Admin Staff]
-      Pharmacy[💊 Pharmacy Staff]
+    sequenceDiagram
+      participant Patient
+      participant AdminStaff
+      participant HMS
+      participant Doctor
+      participant Billing
 
-      %% Use Cases
-      PatientRegistration[Patient Registration]
-      AppointmentScheduling[Appointment Scheduling]
-      AccessEHR[Access EHR]
-      Billing[Billing and Invoice Generation]
-      InventoryManagement[Inventory Management]
+      %% Patient Admission
+      Patient->>AdminStaff: Provide personal and insurance details
+      AdminStaff->>HMS: Enter details into Patient Registration
+      HMS->>AdminStaff: Confirm registration
 
-      %% Hospital Management System
-      HMS[Hospital Management System]
+      %% Medical Record Updates
+      Patient->>Doctor: Provide medical issue details
+      Doctor->>HMS: Update Medical Records with diagnosis and treatment plan
+      HMS->>Doctor: Save confirmation
+      HMS->>Billing: Notify billing of treatment costs
 
-      %% Connections Between Actors and Use Cases
-      Doctors --> AccessEHR
-      Surgeons --> AccessEHR
-      Nurses --> AppointmentScheduling
-      AdminStaff --> PatientRegistration
-      AdminStaff --> AppointmentScheduling
-      AdminStaff --> Billing
-      Pharmacy --> InventoryManagement
-
-      %% Connections Between Use Cases and HMS
-      PatientRegistration --> HMS
-      AppointmentScheduling --> HMS
-      AccessEHR --> HMS
-      Billing --> HMS
-      InventoryManagement --> HMS
+      %% Billing Process
+      AdminStaff->>Billing: Generate invoice for patient
+      Billing->>Patient: Provide invoice details
+      Patient->>Billing: Make payment
+      Billing->>HMS: Update payment status
   </div>
 </body>
 </html>
+
