--- a/index.html
+++ b/index.html
@@ -3,56 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ER Diagram</title>
-  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-  <script>
-    mermaid.initialize({ startOnLoad: true });
-  </script>
+  <title>HMS System Architecture Diagram</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.2.4/mermaid.min.js"></script>
 </head>
 <body>
-  <h1>Relational Database Design - ER Diagram</h1>
+  <h1>Hospital Management System - System Architecture</h1>
   <div class="mermaid">
-    erDiagram
-      PATIENTS {
-        string PatientID
-        string Name
-        string Address
-        string PhoneNumber
-        string InsuranceInfo
-      }
-      APPOINTMENTS {
-        string AppointmentID
-        date AppointmentDate
-        string Time
-        string DoctorID
-        string PatientID
-      }
-      MEDICALRECORDS {
-        string RecordID
-        string PatientID
-        string Diagnosis
-        string TreatmentPlan
-        string TestResults
-      }
-      BILLING {
-        string InvoiceID
-        string AppointmentID
-        float TotalAmount
-        string PaymentStatus
-      }
-      USERS {
-        string UserID
-        string Role
-        string Username
-        string PasswordHash
-      }
-
-      %% Relationships
-      PATIENTS ||--o{ APPOINTMENTS : "has"
-      APPOINTMENTS ||--o{ MEDICALRECORDS : "includes"
-      APPOINTMENTS ||--|| BILLING : "generates"
-      USERS ||--o{ APPOINTMENTS : "accesses"
+    graph TD
+      ClientLayer[Client Layer] -->|User Interaction| ApplicationLayer
+      ApplicationLayer[Application Layer] -->|Data Retrieval| DatabaseLayer
+      ApplicationLayer -->|API Integration| LIS[Laboratory Information System]
+      ApplicationLayer -->|API Integration| RIS[Radiology Information System]
+      ApplicationLayer -->|API Integration| Pharmacy[Pharmacy Management System]
+      DatabaseLayer[Database Layer] -->|Secure Storage| PatientData[Patient Data]
+      DatabaseLayer -->|Secure Storage| AppointmentData[Appointment Data]
+      DatabaseLayer -->|Secure Storage| MedicalRecords[Medical Records]
+      DatabaseLayer -->|Secure Storage| BillingData[Billing Data]
   </div>
+
+  <script>
+    // Initialize Mermaid
+    mermaid.initialize({ startOnLoad: true });
+  </script>
 </body>
 </html>
+
 
