--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HMS System Architecture Diagram</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.2.4/mermaid.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HMS UI Mockup</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hospital Management System - System Architecture</h1>
-  <div class="mermaid">
-    graph TD
-      ClientLayer[Client Layer] -->|User Interaction| ApplicationLayer
-      ApplicationLayer[Application Layer] -->|Data Retrieval| DatabaseLayer
-      ApplicationLayer -->|API Integration| LIS[Laboratory Information System]
-      ApplicationLayer -->|API Integration| RIS[Radiology Information System]
-      ApplicationLayer -->|API Integration| Pharmacy[Pharmacy Management System]
-      DatabaseLayer[Database Layer] -->|Secure Storage| PatientData[Patient Data]
-      DatabaseLayer -->|Secure Storage| AppointmentData[Appointment Data]
-      DatabaseLayer -->|Secure Storage| MedicalRecords[Medical Records]
-      DatabaseLayer -->|Secure Storage| BillingData[Billing Data]
-  </div>
-
-  <script>
-    // Initialize Mermaid
-    mermaid.initialize({ startOnLoad: true });
-  </script>
+    <header>
+        <h1>Hospital Management System Dashboard</h1>
+    </header>
+    <main>
+        <section id="doctor-dashboard">
+            <h2>Doctor's Dashboard</h2>
+            <ul>
+                <li>View Patient Records</li>
+                <li>Order Lab Tests</li>
+                <li>Access Radiology Reports</li>
+            </ul>
+        </section>
+        <section id="nurse-dashboard">
+            <h2>Nurse's Dashboard</h2>
+            <ul>
+                <li>Monitor Vitals</li>
+                <li>Track Medications</li>
+                <li>Update Treatment Plans</li>
+            </ul>
+        </section>
+        <section id="admin-dashboard">
+            <h2>Administrative Staff Dashboard</h2>
+            <ul>
+                <li>Schedule Appointments</li>
+                <li>Manage Billing</li>
+                <li>View Inventory</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 CityCare Hospital HMS</p>
+    </footer>
 </body>
 </html>
+
 
 
